<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Spinner
            android:id="@+id/channel_group_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@android:style/Holo.Light.ButtonBar"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/channel_group_btn_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/channel_group_create" />

            <Button
                android:id="@+id/channel_group_btn_remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/channel_group_remove" />

            <Button
                android:id="@+id/channel_group_btn_rename"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/channel_group_rename" />

            <Button
                android:id="@+id/channel_group_btn_modify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/channel_group_modify" />

            <Button
                android:id="@+id/channel_group_btn_all_apply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/channel_group_all_apply" />
        </LinearLayout>
    </LinearLayout>

    <com.mihaelluis.app.customview.LogTextBox
        android:id="@+id/log_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/log_box_drawable"
        android:scrollbars="vertical" />

</LinearLayout>